bad/method_call_non_class_type_int.example_compiler_output
ERROR
[1mbad/method_call_non_class_type_int.lat:3:4: [1;31merror: [0;1mnon-class type `int` has no methods[m
	42.foo();
	  [1;32m^[m
